--- a/Sidharth_Shanmugam_MEng_Final_Report.tex
+++ b/Sidharth_Shanmugam_MEng_Final_Report.tex
@@ -22,6 +22,7 @@
 
 % - // TODO - header and footers.
 % - // TODO - image remove [h] and alter positions. Maybe use [H]?
+% - // TODO - assess word count
 
 % uncomment the following two lines to check if references are all used
 % \usepackage{refcheck}
