--- a/sections/07_implementation.tex
+++ b/sections/07_implementation.tex
@@ -1,4 +1,4 @@
-Following from Section \ref{design}, this section aims to ... // TODO - complete the intro paragraph to the implementation section.
+Following Section \ref{design}, this section aims to implement the designs, starting with establishing remote communications with the RPi SBC, later developing toolset programs, and finally, the system itself.
 
 \subsection{Interfacing With Raspberry Pi SBC}
 
