reduced word count, still need to finish todo list

--- a/Sidharth_Shanmugam_MEng_Final_Report.tex
+++ b/Sidharth_Shanmugam_MEng_Final_Report.tex
@@ -22,9 +22,9 @@
 
 % - // TODO - header and footers.
 % - // TODO - image remove [h] and alter positions. Maybe use [H]?
-% - // TODO - assess word count
+% - // TODO - proofread and maybe reduce more words
 
-% uncomment the following two lines to check if references are all used
+% - // TODO - uncomment the following two lines to check if references are all used
 % \usepackage{refcheck}
 % \nocite{*}
 
