--- a/sections/06_design.tex
+++ b/sections/06_design.tex
@@ -1,4 +1,4 @@
-This section aims to provide an overview of the system's equipment and considerations driving the system and toolset designs, along with the approaches to overcome technical challenges. Beginning with an exploration of the hardware setup and the constraints established by Shepherd, Section \ref{designconstraints} outlines the key components of the prototype system, identifying the requirements and high-level designs for system tools and the system itself. Section \ref{designsim} introduces the requirements and designs for a tool to develop a backscatter-generating simulation for a synthetic ground truth to verify the system, and Section \ref{designrec} discusses that for a lossless test footage recording tool for the system, to generate physical, real-life, testing data. Finally, Section \ref{designsystem} provides a holistic understanding of the system's architecture and design philosophy, including image processing pipelines and optimisations for real-time, setting the stage for the subsequent implementation and testing phases.
+This section aims to explore the hardware setup and constraints, outlining key components and requirements for the system and toolsets, and concluding with a summary of the architectures and designs to aid in the subsequent implementation and testing phases.
 
 \subsection{System Equipment \& Design Constraints}
 \label{designconstraints}
@@ -10,7 +10,7 @@ Connected to this RPi, via a 4-lane Mobile Industry Processor Interface (MIPI) t
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{assets/submersible.png}
-    \caption{A picture of the submersible system.}
+    \caption{The submersible system.}
     \label{fig:submersible}
 \end{figure}
 
@@ -48,7 +48,7 @@ At the start of this project, Ben provided me with a GoPro recording from a subm
     \label{fig:gopro}
 \end{figure}
 
-When recording in raw format, the RPi GS camera captures in full 1456x1088 sensor resolution at the maximum compatible framerate of 60 frames per second, using the native RAW10 SBGGR10 Bayer format. The SBGGR10 format is constructed of four channels, one red, one blue, and two green, with a 10-bit depth for each. Equation \ref{eq:raw_data_per_frame} calculates the total number of bytes per frame and Equation \ref{eq:raw_data_per_second} calculates the total number of bytes per second when recording in this raw format, where $R_w$ and $R_h$ are the resolution width and height, $D_b$ is the bit depth per channel, $N_{ch}$ is the number of channels, $F_b$ is the number of bits and $F_B$ the number of bytes per frame, $F_{rate}$ is the frame rate, and finally, $S_b$ is the number of bits and $S_B$ the number of bytes per second.
+When recording in raw format, the RPi GS camera captures in full 1456x1088 sensor resolution at the maximum compatible framerate of 60 frames per second, using the native RAW10 SBGGR10 Bayer format, constructed of four channels, one red, one blue, and two green, with a 10-bit depth for each. Equation \ref{eq:raw_data_per_frame} calculates the total number of bytes per frame and Equation \ref{eq:raw_data_per_second} calculates the total number of bytes per second when recording in this raw format, where $R_w$ and $R_h$ are the resolution width and height, $D_b$ is the bit depth per channel, $N_{ch}$ is the number of channels, $F_b$ is the number of bits and $F_B$ the number of bytes per frame, $F_{rate}$ is the frame rate, and finally, $S_b$ is the number of bits and $S_B$ the number of bytes per second.
 
 \begin{align}
     \begin{split} \label{eq:raw_data_per_frame}
@@ -66,14 +66,14 @@ When recording in raw format, the RPi GS camera captures in full 1456x1088 senso
     \end{split}
 \end{align}
 
-The calculations reveal an approximate transfer rate of \SI{475}{\mega\byte} per second when recording the raw footage, presenting a significant challenge due to the substantial data throughput requirement. It would be impossible to transfer at that data rate to the boot drive due to CPU bottlenecks, and most importantly, boot drive write-speed bottlenecks, with the drive being a USB 3.1 stick, despite being a faster option than the default RPi SBC SD-card-based boot drive. To address this challenge, it is imperative to implement a memory buffer in RAM to temporarily store the recording data. This buffer will only offload data to the boot drive once the recording concludes ensuring the CPU is solely reserved for recording. Additionally, employing lossless encoding techniques is essential to reduce the file size, and to convert the recording footage from the Bayer SBGGR10 format to a format natively supported on a wide range of systems ensuring easy file transfers and playback. Equally important is the inclusion of functionality within the recording system to modify resolution for downscaling and to adjust the framerate, effectively further reducing the output filesize without introducing video artefacts, ultimately enhancing the overall efficiency of the system.
+The calculations reveal an approximate transfer rate of \SI{475}{\mega\byte} per second when recording the raw footage, presenting a significant challenge due to the substantial data throughput requirement. It would be impossible to transfer at that data rate to the boot drive due to CPU bottlenecks, and most importantly, boot drive write-speed bottlenecks, with the drive being a USB 3.1 stick. To address this challenge, it is imperative to implement a memory buffer in RAM to temporarily store the recording data, offloading data to the boot drive once the recording concludes ensuring the CPU is solely reserved for recording. Additionally, employing functionality to modify resolution for downscaling and to adjust the framerate, effectively further reducing the output filesize without introducing video artefacts.
 
 \subsection{Underwater Backscatter Cancellation System}
 \label{designsystem}
 
-The introduction to Section \ref{background} mentions five main factors for an accurate and real-time backscatter cancellation lighting system. To consider the first factor, which is the precise backscatter particle segmentation even in varying environmental conditions by mapping the exact backscatter positions, there must be an image processing pipeline, Figure \ref{fig:processing_pipeline} illustrates this pipeline from a high-level perspective. The pipeline must begin with a greyscale filtering stage to reduce image dimensionality by categorising pixels by brightness, ensuring a single-channel output for reduced processing complexity in the subsequent pipeline stages. The next stage applies a Gaussian blur to reduce noise and small-scale variations in pixel intensities, to improve the edge detection performance such that only edges of interest are detected by the algorithm. Post-noise-smoothening, a histogram equalisation stage can improve the dynamic range, enhancing image contrast by redistributing pixel intensities to fully utilise the intensity range. The histogram equalisation stage, albeit theoretically, can drastically improve the edge detection algorithm due to the improved contrast between objects of interest. Application of the Canny algorithm will extract all edges, ideally of the backscatter in isolation due to the previous stages, aiding in the next stage, which is backscatter segmentation. The segmentation stage will utilise a simple methodology, such as highlighting closed-loop edges, in order to isolate and pinpoint the backscatter particles.
+There must be an image processing pipeline, Figure \ref{fig:processing_pipeline} illustrates this pipeline from a high-level perspective. The pipeline must begin with a greyscale filtering stage to reduce image dimensionality by categorising pixels by brightness, ensuring a single-channel output for reduced processing complexity in the subsequent pipeline stages. The next stage applies a Gaussian blur to reduce noise and small-scale variations in pixel intensities, to improve the edge detection performance such that only edges of interest are detected by the algorithm. Post-noise-smoothening, a histogram equalisation stage can improve the dynamic range, enhancing image contrast by redistributing pixel intensities to fully utilise the intensity range. The histogram equalisation stage can drastically improve the edge detection algorithm due to the improved contrast between objects of interest. Application of the Canny algorithm will extract all edges, ideally of the backscatter in isolation due to the previous stages, aiding in the next stage, which is backscatter segmentation. The segmentation stage will utilise a simple methodology, such as highlighting closed-loop edges, in order to isolate and pinpoint the backscatter particles.
 
-The next key factors are low system latency and high system throughput, both interlinked to ensure the system is highly responsive, enabling the projection is still accurate by minimising the processing time after the moment of frame capture. Given Python's high-level abstraction, there is a theoretical limit to how close to real-time the system can operate, a limit that is, in theory, significantly higher than a low-level C-based or an FPGA system. For this system, I will be targetting a total processing duration, which is the time it takes to capture the frame, apply the image processing pipeline, and finally segment the backscatter particles, of \SI{33.33}{\milli\second}, which roughly equates to a framerate of 30 FPS. Employing a parallel processing pipeline, similar to the implementations by De Charette et al. and Tamburo et al., can, again, in theory, increase system throughput. Unfortunately, The Python interpreter is not fully thread-safe and thus utilises the Global Interpreter Lock (GIL), which is a global mutual exclusion lock, to prevent multiple processor threads from executing at once and causing race conditions. As a result, a Python-based processing pipeline will only ever process image frames sequentially, requiring the bypass of GIL to ensure parallel processing. Figure \ref{fig:multiprocessing_pipeline} illustrates the process distribution for the parallel image processing pipeline, such that when the system is segmenting the particles in frame \#2, frame \#3 receives the Canny algorithm, frame \#4 receives a histogram equalisation, frame \#5 receives a Gaussian blur, and frame \#6 receives a greyscale filter, all in parallel while the system captures frame \#7.
+Given Python's high-level abstraction, there is a theoretical limit to how close to real-time the system can operate. For this system, I will be targetting a total processing duration, which is the time it takes to capture the frame, apply the image processing pipeline, and finally segment the backscatter particles, of \SI{33.33}{\milli\second}, which roughly equates to a framerate of 30 FPS. Employing a parallel processing pipeline, similar to the implementations by De Charette et al. and Tamburo et al., will increase system throughput. Unfortunately, The Python interpreter is not fully thread-safe and thus utilises the Global Interpreter Lock (GIL), which prevents multiple processor threads from executing at once and causing race conditions. As a result, a Python-based processing pipeline will only ever process image frames sequentially, requiring the bypass of GIL to ensure parallel processing. Figure \ref{fig:multiprocessing_pipeline} illustrates the process distribution for the parallel image processing pipeline.
 
 \begin{figure}[H]
     \centering
@@ -85,8 +85,8 @@ The next key factors are low system latency and high system throughput, both int
 \begin{figure}[H]
     \centering
     \includegraphics[width=1\textwidth]{assets/image_multiprocessing_pipeline.png}
-    \caption{Illustration of the design for parallel processing in the image processing pipeline for the system.}
+    \caption{Design for parallel processing in the image processing pipeline for the system.}
     \label{fig:multiprocessing_pipeline}
 \end{figure}
 
-In addition to parallel multiprocessing, the system must implement a real-time kernel with the PREEMPT-RT patch. Shepherd's use of the fully-fledged Raspberry Pi OS, which includes a desktop environment and a full software suite, may have been the reason which led to the jitter they experienced, primarily due to the OS scheduler preemption type which prioritises a smooth graphical user interface over system latencies, and also due to the vast number of bundled software with could have been running in the background and consuming CPU time. To ensure minimal OS and software overhead, I will be using the 64-bit Raspberry Pi OS Lite, which does not come with a desktop environment or any non-dependency software. Applying the PREEMPT-RT patch to the OS will, in theory, reduce stage durations due to the reduction in system latency, and additionally, will also reduce latency randomness, ultimately improving system real-time and predictability. The final key factor is the ability to control the system frame rate, essentially by adding a delay to ensure processing at the established rate. For this design, the implementation must track the duration of each stage accurately to compute the necessary delay duration.
+In addition to parallel multiprocessing, the system must implement a real-time kernel with the PREEMPT-RT patch. Shepherd's use of the fully-fledged Raspberry Pi OS, which includes a desktop environment and a full software suite, may have been the reason which led to its jitter, primarily due to the OS scheduler preemption type which prioritises a smooth graphical user interface over system latencies, and also due to the vast number of bundled software with could have been consuming CPU time. To ensure minimal OS and software overhead, I will be using the 64-bit Raspberry Pi OS Lite, which does not come with a desktop environment or any non-dependency software. Applying the PREEMPT-RT patch to the OS will reduce stage durations due to the reduction in system latency, and additionally, will also reduce latency randomness, ultimately improving system real-time and predictability. The final key factor is the ability to control the system frame rate, essentially by adding a delay to ensure processing at the established rate. For this design, the implementation must track the duration of each stage accurately to compute the necessary delay duration.
