--- a/sections/08_testing.tex
+++ b/sections/08_testing.tex
@@ -1,8 +1,6 @@
-In previous work, Shepherd employs a five-stage testing method: (1) calibration for parallax mitigation, (2) testing stationary backscatter, (3) testing with different reflective materials inducing backscatter, (4) motion and synchronisation of the system, and (5), underwater testing. Shepherd carries out these tests using a temporary testing rig, outside the submersible system, consisting of the projector, camera and RPi SBC fastened to a wooden plate, and employing the submersible system with the end open for underwater testing by partial submersion in a water barrel. Unfortunately, due to the large offsets and parallax between the camera and projector, the project shifts its focus from physical testing to software testing and real-time performance analysis. Following the details on implementation in Section \ref{implementation}, this section aims to describe the testing process for testing both the system and the toolsets, including an evaluation of the backscatter cancellation system performance.
+Due to the large offsets and parallax between the camera and projector, the project shifts its focus from physical testing to software testing and real-time performance analysis. Following the details on implementation in Section \ref{implementation}, this section aims to describe the testing process for testing both the system and the toolsets, including an evaluation of the backscatter cancellation system performance.
 
-\subsection{Testing the Systems}
-
-\subsubsection{Bubble Backscatter Simulator}
+\subsection{Bubble Backscatter Simulator}
 
 The bubble backscatter simulator program works very well as a simple backscatter simulation. As Figure \ref{fig:sim_validate} illustrates, the program successfully renders a preview graphical user interface, enabling the user to view the bubbles as they generate and move, and the program also correctly exports each frame of the simulation as a PNG file, emulating the frame-by-frame capture loop behaviour of the backscatter cancellation system. Furthermore, the program exports a CSV dataset of the individual backscatter particle positions and radii from each frame, classing each particle with a unique ID, for the first few particles in the dataset. Despite this, a major drawback that I found from this program is the fact that it doesn't simulate varying backscatter appearances, such as morphological transformations with shape warping, and colour changes, to verify if the system can detect varying backscatter parameters, as all particles are exactly circular and white. In addition, the program does not simulate varying background conditions as the background is exactly black, resulting in the inability to verify whether the system can correctly isolate and segment just the particles and not any regions of interest in the background.
 
@@ -25,7 +23,7 @@ The bubble backscatter simulator program works very well as a simple backscatter
     \label{fig:sim_validate}
 \end{figure}
 
-\subsubsection{Lossless Video Recorder}
+\subsection{Lossless Video Recorder}
 The lossless video recorder proved an invaluable tool that performed almost flawlessly, as Figure \ref{fig:rec_validate} illustrates. A change I had to make was to modify the OS to ensure the console would not output to the HDMI Framebuffer, as this was causing interference with my Framebuffer-driven light source. Unfortunately, as the figure also illustrates, there was a major misalignment issue, where the camera is only able to a small corner in the bottom-left of the projector-lit scene. While a simple cropping function can resolve most of this, which I have implemented in the backscatter cancellation system, albeit reducing the system's useable region, the system will still be affected by the camera's internal reflection, which reduces the field of view and adds distortion. Nevertheless, the recordings were very helpful in verifying the system in a non-synthetic environment without requiring re-deployment underwater.
 
 \begin{figure}[H]
@@ -57,7 +55,7 @@ The lossless video recorder proved an invaluable tool that performed almost flaw
     \label{fig:rec_validate}
 \end{figure}
 
-\subsubsection{Backscatter Cancellation System}
+\subsection{Backscatter Cancellation System}
 I first verified the backscatter cancellation system using the output from the backscatter simulation and it worked flawlessly, identifying and segmenting the bubbles correctly using the minimum enclosing circle logic, as Figure \ref{fig:sys_sim} illustrates. However, when using the underwater test footage, the system started to incorrectly detect the background, mainly the textured padding of the testing tank, as Figure \ref{fig:sys_histequ} illustrates. I identified that this was caused by the histogram equalisation stage, where the entire image frame's pixel intensities are spread, increasing the contrast substantially. I therefore replaced this stage with an OpenCV binary thresholding implementation, ensuring that the system only passes certain pixel intensities. The results after this processing pipeline stage replacement were much better, as Figure \ref{fig:sys_binth} illustrates. Figure \ref{fig:sys_flow_visual} illustrates the final system's image processing pipeline flow.
 
 \begin{figure}[H]
@@ -142,7 +140,7 @@ I first verified the backscatter cancellation system using the output from the b
     \label{fig:sys_flow_visual}
 \end{figure}
 
-\subsection{Performance Evaluation}
+\subsection{System Performance Evaluation}
 
 Due to time constraints, I couldn't implement logic in the backscatter cancellation system which exports a dataset of detected backscatter particles, which I could've then used to compare with the simulation export, the synthetic ground truth, to quantify the accuracy performance of the system. Therefore, this section entirely focuses on the real-time performance, by analysing the execution time for each image processing pipeline, and the total execution time for each frame with the underwater testing tank footage input to the RPi SBC system with the system software `nice' value set to the lowest value (-20), ensuring the highest process priority, ultimately quantifying the impact of multiprocessing and the PREEMPT-RT kernel patch.
 
@@ -173,12 +171,12 @@ Due to time constraints, I couldn't implement logic in the backscatter cancellat
         \textbf{Tot. Duration (\textbf{\textmu s})} & 2,607 & 21,620 & 13,850 & 29,670 & 3253 & 9732 & 15140 & 11920 \\
         \hline
     \end{tabularx}
-    \caption{Table of real-time metrics for the system using the standard (std.) and real-time (RT) kernel, in single-core mode (SP), and with multiprocessing (MP), all values rounded up to the nearest 4 significant figures.}
+    \caption{Real-time system metrics using the standard (Std) and real-time (RT) kernel, in single-core (SP), and with multiprocessing (MP). Values rounded to the nearest 4 sig. figs.}
     \label{table:sys_std_sp_metrics}
 \end{table}
 
 Table \ref{table:sys_std_sp_metrics} transcribes the real-time metrics for the system, across 402 frames of real test footage recorded from the testing tank, listing the execution duration for all the image processing pipeline stages using the standard kernel, real-time kernel, multiprocessing, and in the standard single core mode under the GIL. The data shows a 431\% increase in total latency from the single-core to the multi-core program with the standard kernel, and 37\& increase of that in the real-time kernel, a 729\% increase when moving from the standard to the real-time kernel with single-core, and a 114\% increase when moving from that in the multiprocessing system. The data also contains the standard deviation of the individual processing stage and total system latencies to measure data variability, showing a 199\% increase in fluctuations when moving from the standard to real-time kernel in the single-code environment, and a 21\% decrease of that in the multiprocessing environment.
 
-In contrast to the theory that previous sections cover regarding the reduction of latency with multiprocessing and a real-time OS, the data illustrates the complete opposite. The multiprocessing system employs queues, a form of Inter-Process Communication (IPC), to preserve data whilst processing asynchronously across multiple processes. However, IPCs introduce vast computational overhead due to the requirement of data serialisation and deserialisation when transmitting across processes and during OS context switching. Furthermore, while multiprocessing offers parallelism, it still cannot overcome the synchronous nature of I/O bound processes, as the data quantifies showing a 719\% increase in frame capture durations between the standard single-core and standard multiprocessing systems. The PREEMPT-RT patch, similarly in theory, should've reduced system latency, but most importantly it should've at least resulted in more constant latency measurements. However, the data proves the opposite. The PREEMPT-RT patch increases the frequency of preemption points in the kernel, resulting in more context switches, and when paired with the IPCs, slowing down the system rate and increasing latency.
+In contrast to the theory that previous sections cover regarding the reduction of latency with multiprocessing and a real-time OS, the data illustrates the complete opposite. The multiprocessing system employs queues, a form of Inter-Process Communication (IPC), to preserve data whilst processing asynchronously across multiple processes. These IPCs introduce vast computational overhead due to data serialisation and deserialisation when transmitting across processes and during OS context switching. Furthermore, while multiprocessing offers parallelism, it still cannot overcome the synchronous nature of I/O-bound processes, as the data quantifies showing a 719\% increase in frame capture durations between the standard single-core and standard multiprocessing systems. The PREEMPT-RT patch should've reduced system latency or at least resulted in more constant latency measurements. However, the data illustrates the patch increasing the frequency of preemption points in the kernel, resulting in more context switches, and when paired with the IPCs, slowing down the system rate and increasing latency.
 
-In summary, the PREEMPT-RT patch greatly alters the kernel behaviour, and due to time constraints, I was unable to successfully profile, research and analyse the effects and pinpoint the exact cause for the latency increase, however it is clear that trying to modify the kernel behaviour from such an abstracted level causes more negative responses, than doing so from a low system level, proving that it is better to leave these tasks to the OS, which is specialised in correctly optimising processes much better than me. To conclude, my single-core RPi SBC system achieves a total processing latency of just \SI{2.6}{\milli\second}, a great improvement from the system in De Charette et al., which takes \SI{4.1}{\milli\second} to process frames on a much more powerful desktop computer, and achieving the \SI{33.33}{\milli\second} (30FPS) target that I had originally set in Section \ref{designsystem}.
+To conclude, my single-core RPi SBC system achieves a total processing latency of just \SI{2.6}{\milli\second}, a great improvement from the system in De Charette et al., which takes \SI{4.1}{\milli\second} to process frames on a much more powerful desktop computer, and achieving the \SI{33.33}{\milli\second} (30FPS) target.
