--- a/sections/05_background.tex
+++ b/sections/05_background.tex
@@ -1,6 +1,6 @@
 An accurate and real-time backscatter-cancelling lighting system must consider five main factors: (a) precise backscatter particle segmentation even in varying environmental conditions by mapping the exact backscatter positions to aid in (b), the accurate projection of the backscatter cancelling light patterns, ensuring the whole scene except backscatter is lit, (c) low system latency by minimising the time it takes between frame capture and the light pattern projection, ensuring the projection is still correct even with fast-moving backscatter, interlinked with (d), adequate system throughput with parallel processing to increase system responsiveness for reaching the low latency goal, and finally, (e) the ability to control and establish the system frame rate to ensure system predictability.
 
-This section aims to gather background information on the five aforementioned system factors. Beginning with an investigation of previous work on this project in Section \ref{prevwork}, followed by drawing comparisons and exploring limitations with Section \ref{autolights}, which introduces work for an automotive-aimed system. Section \ref{gasquant} explores work related to underwater imaging for precise environmental analysis, drawing on a new approach for backscatter segmentation and researching methodologies for tracking. Section \ref{buildingblocks} studies computer systems and architectures for this project, also discussing approaches to mitigate real-time limitations from previous work. Finally, a summary in Section \ref{bisummary} consolidates all explored aspects, linking to the wider context and constraints with a decision-making description of the chosen technologies.
+This section, gathers background information on the five system factors, beginning with an investigation of previous work on this project. Then exploring work related to underwater imaging for precise environmental analysis. Finally, a study on computer systems and architectures for this project and a summary of all aspects concludes the section.
 
 \subsection{Previous Work in Underwater Anti-Backscatter Lighting Systems}
 \label{prevwork}
@@ -10,7 +10,7 @@ Previous work on this project in \cite{katieshepherdMachineVisionBased2023} by S
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.7\textwidth]{assets/shepherd_fig6_system.png}
-    \caption{An illustration from the paper in \cite{katieshepherdMachineVisionBased2023} showing the high-level system stages.}
+    \caption{The high-level system stages from \cite{katieshepherdMachineVisionBased2023}.}
     \label{fig:shepherd_system_stages}
 \end{figure}
 
@@ -36,13 +36,13 @@ Similar to the underwater backscatter that this paper explores and attempts to e
         \caption{}
         \label{fig:cmu_auto_pipeline}
     \end{subfigure}
-    \caption{From \cite{decharetteFastReactiveControl2012}: (\ref{sub@fig:beamsplitter_system}) An illustration of the system configuration including a beamsplitter for parallax elimination through co-location, (\ref{sub@fig:cmu_auto_pipeline}) a visualisation of the parallel pipeline stages for their system.}
+    \caption{From \cite{decharetteFastReactiveControl2012}: (\ref{sub@fig:beamsplitter_system}) The system configuration including a beamsplitter for parallax elimination through co-location, (\ref{sub@fig:cmu_auto_pipeline}) the parallel pipeline stages for their system.}
     \label{fig:decharette}
 \end{figure}
 
 The automotive backscatter-cancelling headlight system utilises an image processing pipeline that applies a background subtraction, albeit not specifying the exact method, followed by blurring and thresholding to isolate the bright water spots. The system employs the connected-components algorithm to segment the backscatter particles, this algorithm scans an image to group its pixels into components based on pixel connectivity, i.e., all pixels in a connected component share similar pixel intensity values and are in some way connected \cite{robertfisherConnectedComponentsLabeling2003}. Unlike Shepherd's system which employs a blob detection algorithm, this system is resilient to unique backscatter particle characteristics, allowing for segmentation regardless of fixed parameters despite also being a computationally simple approach. However, the connected-components algorithm may be inherently limited when given low-quality input images as it may not correctly connect pixels due to distortion and noise.
 
-Although not specifying the exact methods, the automotive system in De Charette et al. employs backscatter particle tracking with a predictive algorithm to project backscatter-cancelling light patterns by accounting for the movement during the system processing period, denoted by the system latency time. Due to the linear and vertical movement of rain and snowfall, one can assume they are using a simple linear interpolative approach with the assumption the particles are moving at a constant speed, to predict the future particle position. To increase system throughput, the work in De Charette et al. proposes a three-stage parallel processing pipeline, illustrated in Figure \ref{fig:cmu_auto_pipeline}. Stage 1 represents the task of capturing the frame from the camera, with $TX_c$ denoting the image data transfer from the camera to the computer. Stage 2 represents the image processing steps, with drop detection, prediction, and projection pattern generation, with $TX_p$ denoting the computer-to-projector data transfer. The third and final stage represents the refresh time of the projector. This system, once primed, will run with a three-frame latency: as the $n^{th}$ frame is being captured, the $n^{th} - 1$ frame is being processed, and the $n^{th} - 2$ frame is being projected. While an increased latency is counter-intuitive, the delay effect is heavily mitigated by the predictive functionality, which can be further improved by precisely clamping the execution and $TX$ duration for each stage.
+Although not specifying the exact methods, the automotive system in De Charette et al. employs backscatter particle tracking with a predictive algorithm to project backscatter-cancelling light patterns by accounting for the movement during the system processing period, denoted by the system latency time. Due to the linear and vertical movement of rain and snowfall, one can assume they are using a simple linear interpolative approach with the assumption the particles are moving at a constant speed, to predict the future particle position. To increase system throughput, the work in De Charette et al. proposes a three-stage parallel processing pipeline, illustrated in Figure \ref{fig:cmu_auto_pipeline}. Stage 1 represents the task of capturing the frame from the camera, with $TX_c$ denoting the image data transfer from the camera to the computer. Stage 2 represents the image processing steps, with drop detection, prediction, and projection pattern generation, with $TX_p$ denoting the computer-to-projector data transfer. The third and final stage represents the refresh time of the projector. This system, once primed, will run with a three-frame latency: as the $n^{th}$ frame is being captured, the $n^{th} - 1$ frame is being processed, and the $n^{th} - 2$ frame is being projected. With this fixed latency mitigated by the predictive functionality.
 
 The system in De Charette et al. takes, on average across 5500 frames, \SI{4.214}{\milli\second} to transfer data from the camera to the host computer, a \SI{3.2}{\giga\hertz} Intel Xeon processor with \SI{8}{\giga\byte} of RAM running Windows Vista 64-bit, \SI{4.081}{\milli\second} to process the image, \SI{4.214}{\milli\second} to send the data to the projector, and \SI{9}{\milli\second} for the projector to output. Thus, total system latency is \SI{21.51}{\milli\second}, with an accuracy of 68.9\% for rain. The work in \cite{tamburoProgrammableAutomotiveHeadlights2014} by Tamburo et al. expands on the system by De Charette et al. with a more powerful desktop PC for image processing and an FPGA-based controller for the specialised projector. This system achieves an average frame processing time of \SI{0.3}{\milli\second}, with a total response time ranging between \SI{1}{\milli\second} to \SI{2.5}{\milli\second}.
 
@@ -58,7 +58,7 @@ The paper compares the Canny algorithm approach with the simple image binary thr
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.7\textwidth]{assets/bubble-segmentation-canny-thresholding.png}
-    \caption{An illustration from the paper in \cite{thomanekAutomatedGasBubble2010} showing the original input frame in the left-most image, bubble segmentation using simple binary thresholding in the middle, and bubble segmentation using the Canny edge detection algorithm in the right-most image.}
+    \caption{From \cite{thomanekAutomatedGasBubble2010}, the original input frame in the left-most image, bubble segmentation using simple binary thresholding in the middle, and bubble segmentation using the Canny edge detection algorithm in the right-most image.}
     \label{fig:canny_segmentation_compare}
 \end{figure}
 
@@ -66,7 +66,7 @@ While this paper by Thomanek et al. provides valuable insight and serves as an e
 
 Zelenka introduces a snake-based active contour model developed by Kass et al. in \cite{kassSnakesActiveContour1988} for a more stable and precise method for bubble detection. As explained by Kass et al., a snake embodies an energy-minimising spline that's guided by external forces and influenced by image characteristics that collectively drive the snake towards prominent features within the image, such as lines and edges, all while the snake dynamically adheres to nearby edges due to the active contour model. The classic snake method, illustrated in Figure \ref{subfig:classic_snake}, uses a bounding box from the baseline localisation for initialisation, shown in blue, from which the snake algorithm optimises with each iteration on a low-quality image sequence. The figure exemplifies the unreliability of the classic snake method due to light areas within the centre of the bubble, as the red outline borders this region instead of the bubble itself. Zelenka, therefore, introduces a novel enhancement to the classic snake method to improve performance in varying lighting conditions by utilising gradient information of an image to compute external energy terms that guide the snake.
 
-Zelenka also employs the Covariance Matrix Adaptation - Evolution Strategy (CMA-ES) based approach for ellipse fitting in the paper, The CMA-ES algorithm begins by initialising ellipse parameters and defining an objective function to evaluate the fit, then iteratively updates a distribution over the parameter space, generating candidate solutions and optimising the fit by adjusting the distribution parameters, repeating until convergence, yielding the parameters of the best-fitting ellipse. Zelenka compares all of these bubble segmentation methods using a sequence of 20 GoPro-captured images, with circa 10 bubbles visible per frame and manual ground truth. The results, illustrated in Figure \ref{fig:zelenka_performance}, show a clear improvement across all methods compared to the baseline Canny approach, which achieved a detection rate of 77.3\%. The classic snake approach achieved the best detection rate of 89.7\% and the worst rate was achieved with the CMA-ES approach.
+Zelenka compares all of these bubble segmentation methods using a sequence of 20 GoPro-captured images, with circa 10 bubbles visible per frame and manual ground truth. The results, illustrated in Figure \ref{fig:zelenka_performance}, show a clear improvement across all methods compared to the baseline Canny approach, which achieved a detection rate of 77.3\%. The classic snake approach achieved the best detection rate of 89.7\% and the gradient-snake achieved 89.3\%.
 
 \begin{figure}[H]
     \centering
@@ -83,7 +83,7 @@ Zelenka also employs the Covariance Matrix Adaptation - Evolution Strategy (CMA-
         \caption{Gradient-based snake algorithm.}
         \label{subfig:gradient_snake}
     \end{subfigure}
-    \caption{An illustration of the classic snake method in (\ref{sub@subfig:classic_snake}) and the gradient snake method in (\ref{sub@subfig:classic_snake}) from the work in \cite{zelenkaGasBubbleShape2014a}. Sub-subfigures from (a) to (d) for both methods show every third step in the snake optimisation process, and (e) shows the final result.}
+    \caption{The classic snake method in (\ref{sub@subfig:classic_snake}) and the gradient snake method in (\ref{sub@subfig:classic_snake}) from \cite{zelenkaGasBubbleShape2014a}. Sub-subfigures from (a) to (d) for both methods show every third step in the snake optimisation process, and (e) shows the final result.}
     \label{fig:snake_methods}
 \end{figure}
 
@@ -106,7 +106,7 @@ Zelenka also employs the Covariance Matrix Adaptation - Evolution Strategy (CMA-
     \label{fig:zelenka}
 \end{figure}
 
-Thomanek et al. introduced a novel approach for bubble tracking, leveraging the `least distance assumption'. This assumption entails realising that the distance travelled by a bubble between two successive frames is typically smaller than the distance to its closest neighbouring bubble. While this assumption may not hold for scenarios involving overlapping bubbles, extremely high bubble concentrations, or cases where the travel distance exceeds the distances to neighbouring bubbles, it, however, facilitates a computationally straightforward method for determining bubble positions in successive frames and estimating the bubble rise velocity from the sea floor. Despite the computation simplicity, this method may not present a fair trade-off due to the backscatter originating from bubbles, which can be highly concentrated, overlapping, and subject to rapid movement, especially in the presence of UUV propellers. Zelenka's paper introduces a novel approach for tracking bubbles by employing a Kalman filter \cite{kalmanNewApproachLinear1960} to predict bubble positions in subsequent frames based on initial detections. The Kalman filter utilises a recursive algorithm to estimate the state of a dynamic system, in this case, the bubble's position, by incorporating both prediction and measurement update steps. Additionally utilising, the Hungarian method \cite{kuhnHungarianMethodAssignment1955}, which finds the optimal assignment of a set of tasks to a set of agents, minimising the total cost or maximising the total profit of the assignments, for minimum weighted matching between predicted and newly detected bubble positions, optimising the association process. While it remains uncertain whether the Kalman filter-based method is immune to the limitations associated with the `least distance assumption', Zelenka does validate its capacity as a highly reliable tracking mechanism. An illustration of the whole system from Zelenka is illustrated in Figure \ref{fig:zelenka_system}, showing both bubble detection and tracking.
+Thomanek et al. introduced a novel approach for bubble tracking, leveraging the `least distance assumption'. This assumption entails realising that the distance travelled by a bubble between two successive frames is typically smaller than the distance to its closest neighbouring bubble. While this assumption may not hold for scenarios involving overlapping bubbles, extremely high bubble concentrations, or cases where the travel distance exceeds the distances to neighbouring bubbles, it, however, facilitates a computationally straightforward method for determining bubble positions in successive frames and estimating the bubble rise velocity from the sea floor. Despite the computation simplicity, this method may not present a fair trade-off due to the backscatter originating from bubbles, which can be highly concentrated, overlapping, and subject to rapid movement, especially in the presence of UUV propellers. Zelenka's paper introduces a novel approach for tracking bubbles by employing a Kalman filter \cite{kalmanNewApproachLinear1960} to predict bubble positions in subsequent frames based on initial detections. The Kalman filter utilises a recursive algorithm to estimate the state of a dynamic system, in this case, the bubble's position, by incorporating both prediction and measurement update steps. Additionally utilising, the Hungarian method \cite{kuhnHungarianMethodAssignment1955}, which finds the optimal assignment in a weighted graph, for minimum weighted matching between predicted and newly detected bubble positions, optimising the association process. While it remains uncertain whether the Kalman filter-based method is immune to the limitations associated with the `least distance assumption', Zelenka does validate its capacity as a highly reliable tracking mechanism. An illustration of the whole system from Zelenka is illustrated in Figure \ref{fig:zelenka_system}, showing both bubble detection and tracking.
 
 \subsection{System Building Blocks}
 \label{buildingblocks}
@@ -114,14 +114,14 @@ Thomanek et al. introduced a novel approach for bubble tracking, leveraging the 
 \subsubsection{Real-Time Linux Kernel with the PREEMPT-RT Patch}
 \label{preempt}
 
-Shepherd's work highlighted the necessity of employing a Real-Time Operating System (RTOS) to mitigate the jittering effect. This phenomenon led to unpredictable bursts of reduced frame rates and lag. An RTOS facilitates the compliance of a `hard' real-time system, which can provide a guarantee of the maximum time a task necessitates for completion. Although RTOS products are available for most computer systems, they often come with numerous limitations that necessitate circumvention, especially when compared to a general-purpose operating system like Linux. Similar to Shepherd's system, in Linux, when a task in user space, where normal user processes operate, is interrupted, the scheduler will preemptively schedule another task if the interrupt handler can awaken it once it returns. However, many sections in kernel space, where the kernel's code and data reside and execute, do not support preemption due to the presence of spinlocks. Spinlocks are non-blockable and non-sleepable programmatic loops that safeguard critical sections of code. Consequently, the preemption logic breaks down when a user space task invokes a kernel-specific function, thereby transitioning to kernel space upon receiving an interrupt. 
+Shepherd's work highlighted the necessity of employing a Real-Time Operating System (RTOS) to mitigate jittering, the unpredictable bursts of reduced frame rates. An RTOS facilitates the compliance of a `hard' real-time system, which can provide a guarantee of the maximum time a task necessitates for completion. Similar to Shepherd's system, in Linux, many sections in kernel space, where the kernel's code and data reside and execute, do not support preemption due to the presence of spinlocks. Spinlocks are non-blockable and non-sleepable programmatic loops that safeguard critical sections of code. Consequently, the preemption logic breaks down when a user space task invokes a kernel-specific function, thereby transitioning to kernel space upon receiving an interrupt. 
 
-Figure \ref{fig:bootlin_flow}, depicted in the material from \cite{bootlinUnderstandingLinuxRealtime2024} by Bootlin, showcases the challenge of user space task promotions to kernel space, highlighting how kernel-based spinlocks contribute to unpredictable jitter, as denoted by the green question mark. Apart from the kernel space incompatibility, Linux already facilitates user space preemption through task priority-based real-time scheduling, enabling RTOS functionality. The PREEMPT-RT kernel patch modifies all kernel-space code, allowing it to become preemptible and deterministic. While insufficient in transforming Linux into a `hard' RTOS, the PREEMPT-RT patch represents a positive stride toward minimizing task-switching latencies. Using a test suite that contains programs to test various real-time Linux parameters, the material in \cite{maurorivaRaspberryPi4B2019} quantifies system latencies for the PREEMPT-RT patch, drawing comparisons with the non-RT kernel. The results are in Figure \ref{fig:lemariva_latency}, displaying the maximum latency measurements obtained with the standard kernel, registering at \SI{301}{\micro\second}, whereas the PREEMPT-RT kernel yielded a significantly reduced latency of \SI{83}{\micro\second}. This confirms a notable 3.63x reduction in latency achieved through the implementation of the kernel patch.
+Figure \ref{fig:bootlin_flow}, depicted in the material from \cite{bootlinUnderstandingLinuxRealtime2024} by Bootlin, highlights how kernel-based spinlocks contribute to unpredictable jitter, as denoted by the green question mark. Apart from the kernel space incompatibility, Linux already facilitates user space preemption through task priority-based real-time scheduling, enabling RTOS functionality. The PREEMPT-RT kernel patch modifies all kernel-space code, allowing it to become preemptible and deterministic. While insufficient in transforming Linux into a `hard' RTOS, the PREEMPT-RT patch minimises task-switching latencies. Using a test suite that contains programs to test various real-time Linux parameters, the material in \cite{maurorivaRaspberryPi4B2019} compares system latencies with the PREEMPT-RT patch. The results are in Figure \ref{fig:lemariva_latency}, displaying the maximum latency measurements obtained with the standard kernel, registering at \SI{301}{\micro\second}, whereas the PREEMPT-RT kernel yielded a significantly reduced latency of \SI{83}{\micro\second}, a notable 3.63x reduction.
 
 \begin{figure}[H]
     \centering
     \includegraphics[width=1\textwidth]{assets/bootlin-interrupt-flow.png}
-    \caption{An illustration from the paper material in \cite{bootlinUnderstandingLinuxRealtime2024} of kernel-space latency from an interrupt in the Linux kernel.}
+    \caption{From \cite{bootlinUnderstandingLinuxRealtime2024}, illustrating kernel-space latency from an interrupt in the Linux kernel.}
     \label{fig:bootlin_flow}
 \end{figure}
 
@@ -140,20 +140,16 @@ Figure \ref{fig:bootlin_flow}, depicted in the material from \cite{bootlinUnders
         \caption{}
         \label{fig:rt_latency}
     \end{subfigure}
-    \caption{Illustration from \cite{maurorivaRaspberryPi4B2019} presents the latency measurements obtained following a Cyclictest execution from the RT-Tests suite. It contrasts the results between (\ref{sub@fig:std_latency}) the standard Linux RPi kernel and (\ref{sub@fig:rt_latency}) the Linux RPi kernel with the PREEMPT-RT patch applied.}
+    \caption{Latency measurements from \cite{maurorivaRaspberryPi4B2019} using Cyclictest from the RT-Tests suite. (\ref{sub@fig:std_latency}) The standard Linux RPi kernel, and (\ref{sub@fig:rt_latency}) the PREEMPT-RT kernel.}
     \label{fig:lemariva_latency}
 \end{figure}
 
 \subsubsection{Computing Platforms}
-Field Programmable Gate Arrays (FPGAs), semiconductor devices structured around a matrix of configurable logic blocks (CLBs) interconnected via programmable interconnects \cite{WhatFPGAField}, are ideal solutions for computationally demanding image processing tasks, owing to their inherent hardware parallelism and low latency characteristics. In contrast, CPUs execute computations sequentially, processing algorithms step by step, restricting execution to one operation at a time. Despite the availability of highly efficient intellectual property (IP) cores for FPGA-based logic acceleration, development and prototyping times may increase due to the intricate low-level hardware intricacies involved. Additionally, FPGAs typically incur higher costs compared to traditional CPU-based computing systems.
-
-On the other hand, the Raspberry Pi (RPi) company has been at the forefront of designing high-performance, cost-effective, single-board, and modular computers based on the Arm architecture and running the Linux operating system since 2012 \cite{raspberrypiltdRaspberryPiUs}. The standard RPi product lineup provides an excellent non-FPGA, CPU-based route for swift and straightforward development and deployment. Recent RPi models boast a strong feature set, including up to 8GB of onboard RAM, dedicated GPU and video decoding capabilities, HDMI output interfaces, dual-band WiFi with Bluetooth support, Gigabit Ethernet connectivity, USB 3.0 and 2.0 ports, MIPI-compatible interfaces for cameras and displays, and an array of 40 GPIO pins.
+Field Programmable Gate Arrays (FPGAs), semiconductor devices structured around a matrix of configurable logic blocks (CLBs) interconnected via programmable interconnects \cite{WhatFPGAField}, are ideal solutions for computationally demanding image processing tasks, owing to their inherent hardware parallelism and low latency characteristics. Despite the availability of highly efficient intellectual property (IP) cores for FPGA-based logic acceleration, development and prototyping times may increase due to the intricate low-level hardware intricacies involved. Additionally, FPGAs typically incur higher costs compared to traditional CPU-based computing systems. On the other hand, the Raspberry Pi (RPi) company has been at the forefront of designing high-performance, cost-effective, single-board, and modular computers based on the Arm architecture and running the Linux operating system since 2012 \cite{raspberrypiltdRaspberryPiUs}. The standard RPi product lineup provides an excellent non-FPGA, CPU-based route for swift and straightforward development and deployment.
 
 \subsubsection{Specialised Light Source}
 
-A Digital Light Processing (DLP) projector plays a crucial role in projecting backscatter-cancelling light patterns. DLP chipset, developed by Larry Hornbeck of Texas Instruments in 1987, comprises a Digital Micromirror Device (DMD), which houses millions of reflective aluminium mirrors, typically only a few microns wide. The DMD serves as a Micro-Opto-Electro-Mechanical System (MOEMS) Spatial Light Modulator (SLM), utilising digital signals to precisely control the angle of each mirror. This capability enables the modulation and attenuation of an incident light beam with remarkable precision. 
-
-Figure \ref{fig:dmd_dlp} illustrates how a DLP projector employs this specialised technology: Initially, a beam emitted from a high-intensity white lamp is directed towards a rotating colour-tinted lens wheel, which typically includes red, green, and blue filters, as well as a clear lens for unfiltered light passage. Subsequently, an internal lens diffracts the coloured beam and directs it onto the DMD. Here, the angle and duration of each microscopic mirror's activation dictate the colour and intensity of individual pixels. The DMD selectively redirects the desired beams of each pixel through a diffraction lens to exit the projector. In instances where a particular pixel's beam is not required, the corresponding mirrors on the DMD remain inactive, directing the beam into a light-absorbing region to prevent leakage and ensure image integrity.
+A Digital Light Processing (DLP) projector plays a crucial role in projecting backscatter-cancelling light patterns. The DLP chipset comprises a Digital Micromirror Device (DMD), which houses millions of reflective aluminium mirrors, typically only a few microns wide. The DMD serves as a Micro-Opto-Electro-Mechanical System (MOEMS) Spatial Light Modulator (SLM), enabling the modulation and attenuation of an incident light beam with precision. As Figure \ref{fig:dmd_dlp} illustrates, a beam emitted from a high-intensity white lamp is directed towards a rotating colour-tinted lens wheel. Subsequently, an internal lens diffracts the coloured beam onto the DMD. The angle and duration of each microscopic mirror's activation dictate the intensity of individual pixels, redirecting the desired beams of each pixel through a diffraction lens to exit the projector. Inactive DMD mirrors direct the beam into a light-absorbing region to prevent light leakage and ensure image integrity.
 
 \begin{figure}[H]
     \centering
@@ -171,13 +167,13 @@ Figure \ref{fig:dmd_dlp} illustrates how a DLP projector employs this specialise
         \caption{}
         % \label{subfig:dlp_projector}
     \end{subfigure}
-    \caption{(a) An illustration of the microscopic mirror array within a DMD chip \cite{HowDoesDLP}. (b) A cross-sectional view illustrating the internals of an example projector employing DLP technology.}
+    \caption{(a) The microscopic mirror array within a DMD chip \cite{HowDoesDLP}. (b) Cross-sectional view of an example projector employing DLP technology.}
     \label{fig:dmd_dlp}
 \end{figure}
 
 \subsubsection{Specialised Camera Sensor}
 
-The cameras found in many traditional and consumer-grade electronic devices, including smartphones, typically utilise a CMOS sensor equipped with a rolling shutter. Although these sensors are smaller and more cost-effective, they introduce distortion effects when capturing fast-moving subjects, attributed to their line-by-line scan image-capturing characteristic. Unlike the line-by-line scanning characteristic of a rolling shutter, a global shutter sensor captures a snapshot of the scene using all pixels simultaneously, rather than activating pixels sequentially from the top of the sensor and working its way down. Figures \ref{subfig:rs_timeline} and \ref{subfig:gs_timeline} depict the distinctions in image capture between a rolling shutter and a global shutter, while Figure \ref{subfig:rs_vs_gs} showcases the significant disparities between each shutter type. The Raspberry Pi company offers a global shutter camera equipped with a 1.6MP Sony IMX296 sensor, boasting plug-and-play compatibility with Raspberry Pi computers.
+The cameras found in many traditional and consumer-grade electronic devices, including smartphones, typically utilise a CMOS sensor equipped with a rolling shutter. These sensors introduce distortion effects when capturing fast-moving subjects, attributed to their line-by-line scan image-capturing characteristic. A global shutter sensor captures a snapshot of the scene using all pixels simultaneously, rather than line-by-line. Figures \ref{subfig:rs_timeline} and \ref{subfig:gs_timeline} depict the distinctions in image capture between a rolling shutter and a global shutter, and Figure \ref{subfig:rs_vs_gs} showcases capture differences. The Raspberry Pi company offers a global shutter camera with plug-and-play compatibility with Raspberry Pi computers.
 
 \begin{figure}[H]
     \centering
@@ -204,10 +200,6 @@ The cameras found in many traditional and consumer-grade electronic devices, inc
     \caption{The image capture of a rolling shutter sensor in (\ref{sub@subfig:rs_timeline}) and that of a global shutter in (\ref{sub@subfig:gs_timeline}) \cite{reddigitalcinemaGlobalRollingShutters}, and (\ref{sub@subfig:rs_vs_gs}), the comparison between the sensors when capturing a fast-moving target \cite{RollingShutterVs}.}
     \label{fig:rs_vs_gs}
 \end{figure}
-
-\subsubsection{The Python Programming Language and OpenCV}
-
-OpenCV is an open-source computer vision and machine learning software library with over 2500 optimised algorithms, including a comprehensive set of classic and state-of-the-art computer vision and machine learning algorithms \cite{opencv}. Originally developed in C++, OpenCV offers interfaces for Python, Java, and MATLAB, ensuring compatibility across a wide range of platforms. It targets real-time vision applications by leveraging CPU accelerators like MMX and SSE instructions for parallel data processing, as well as GPU accelerators. OpenCV provides simple and high-level wrappers for advanced computer vision algorithms and tools, therefore, significantly reducing development and prototyping time with minimal performance trade-offs. Python, with its easy-to-read and write syntax and robust debugging capabilities, serves as an ideal programming language for interfacing with OpenCV and implementing computer vision tasks.
 
 \subsection{Summary}
 \label{bisummary}
